Rebrand to Quantum Spark: Energetic copy, Access Key security, and Gumroad integration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sovereign-potential-engine",
+  "name": "quantum-spark",
   "private": true,
   "version": "0.0.0",
   "type": "module",
